--- a/bd-a1/Dockerfile
+++ b/bd-a1/Dockerfile
@@ -1,15 +1,15 @@
+# Specify the base image as Ubuntu
 FROM ubuntu
 
-# Install necessary packages and additional modules
-RUN apt-get update && \
-    apt-get install -y python3 python3-pip && \
-    pip3 install pandas numpy seaborn matplotlib scikit-learn scipy
+# Install required packages
+RUN apt-get update && apt-get install -y python3 python3-pip
+RUN pip3 install pandas numpy seaborn matplotlib scikit-learn scipy
 
 # Create a directory inside the container
 RUN mkdir -p /home/doc-bd-a1/
 
-# Set the working directory
-WORKDIR /home/doc-bd-a1/
+# Move the dataset file to the container
+COPY dataset_file_name /home/doc-bd-a1/
 
-# Open bash shell upon container startup
-CMD ["/bin/bash"]
+# Open the bash shell upon container startup
+CMD ["/bin/bash"]
